tests/valid/binary_operators/associativity.rs
/*
return: -4
*/

main(): int {
    return 1 - 2 - 3;
}