tests/invalid/unary_operators/wrong_order.rs
/*
fail: 1
*/

main(): int {
    return 4-;
}